--- a/DM.css
+++ b/DM.css
@@ -1,8 +1,11 @@
 body {
     width: 98%;
     height: 98%;
-    background: -webkit-linear-gradient(to bottom, #BAC94A, #E2D36B);
-    background: linear-gradient(to bottom, #BAC94A, #E2D36B);
+    /*background: -webkit-linear-gradient(to bottom, #BAC94A, #E2D36B);
+    background: linear-gradient(to bottom, #BAC94A, #E2D36B);*/
+    background: -webkit-linear-gradient(to bottom, #94b447, #5d6e1e);
+    background: linear-gradient(to bottom, #94b447, #5d6e1e);
+    
     font-family: Assistant, sans-serif;
     min-height: 97vh;
     display: flex;
@@ -34,7 +37,7 @@ body {
       0px 2px 10px rgba(0,0,0,0.2), 
       0px 10px 20px rgba(0,0,0,0.3), 
       0px 30px 60px 1px rgba(0,0,0,0.5);
-    border-radius: 3px;
+    border-radius: 10vh;
     height: 80%;
     width: 25%;
     text-align: center;
@@ -52,7 +55,7 @@ body {
     .home-card{
         height: 25%;
         width: 80%;
-        
+        border-radius: 50vh;
         margin-top: 10%;
         margin-bottom: 10%;
     }
